--- a/public/.htaccess
+++ b/public/.htaccess
@@ -47,3 +47,5 @@ Options -Indexes
 # Disable server signature start
 	ServerSignature Off
 # Disable server signature end
+
+setEnv CI_ENVIRONMENT development
